--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
+/Spark DataFrame UserVisits-GeoIP task.pdf
+
+/src/main/resources/
 *.class
 *.log
+
+dist/*
+target/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+.history
+.cache
+.lib/
+.idea/
+/BidErrors.csv/
